# Bacteria-Framework

./: .anjuta_sym_db.db  .travis.yml  AUTHORS  ChangeLog  LICENSE.TXT  Makefile.am  README  README.md  config.h  configure.ac  libtool
.anjuta/session/: anjuta.session  dock-layout.xml
libbacteria/: Makefile.am  cryptocoins.c  cryptocoins.h  json_rpc.h  macros.h  net.c  net.h
libbacteria/encdec/: hashes.c  hashes.h  rsa_ed25519.h  x25519.h
libbacteria/encdec/async/: x25519.c
libbacteria/encdec/sync/: AES.c
libbacteria/encdec/verify/: rsa_ed25519.c
libbacteria/lua/: afirst.c  libed25519rsa.c  libed25519rsa.h  libencdec.c  libencdec.h  libnet.c  libnet.h  libsockets.c  libsockets.h  lua.h  luaserv.c  utils.c  utils.h
src/: .gitignore  Makefile.am  async_serv.cpp  async_serv.h  main.cpp  opcodes.cpp  opcodes.h  signal_handler.h
src/assets/: deletor_recursive.cpp
src/bootstrap/: Makefile.am  main.cpp  serv.cpp  serv.h
src/bootstrap/luasubmodules/: init.lua
src/client/: Makefile.am  main.cpp
src/cxxmodules/: bacteria.cpp
src/cxxmodules/bacteria/: TODO  cryptocurrency.cpp  ed25519rsa.cpp  encdec.cpp  images.cpp  net.cpp
src/luasubmodules/: bencdec.lua  init.lua
src/net/: events.h  opcodes.cpp  opcodes.h  utils.cpp  utils.h
src/protocolcxx/: Makefile.am  bnet.cpp  bnet.h  cryptocurrency.cpp  cryptocurrency.h  ed25519rsa.cpp  ed25519rsa.h  encdec.cpp  encdec.h  images.cpp  images.h
